# social-world-tour

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: auth.rs  error.rs  lib.rs  server.rs
api/src/auth/: controller.rs  mod.rs  models.rs  response.rs  service.rs
api/src/controllers/: posts.rs
api/src/health/: controller.rs
api/src/nodes/: controller.rs  dto.rs  response.rs
api/src/routes/: posts.rs  users.rs
api/src/teams/: controller.rs  dto.rs  mod.rs  response.rs  service.rs
api/src/trips/: controller.rs  dto.rs  mod.rs  response.rs
api/src/users/: controller.rs  dto.rs  errors.rs  mod.rs  response.rs  service.rs
api/templates/: index.html.tera  new.html.tera
core/: Cargo.toml
core/src/: lib.rs  query.rs
core/src/nodes/: mod.rs  mutation.rs  query.rs
core/src/posts/: mutation.rs
core/src/teams/: mutation.rs  query.rs
core/src/trips/: mod.rs  mutation.rs  query.rs
core/src/user_teams/: mutation.rs
core/src/user_trips/: mod.rs  mutation.rs
core/src/users/: mutation.rs  query.rs
core/tests/: mock.rs  prepare.rs
entity/: Cargo.toml
entity/src/: lib.rs  nodes.rs  posts.rs  prelude.rs  team.rs  teams.rs  trips.rs  user_team.rs  user_teams.rs  user_trips.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230329_121826_create_user_table.rs  m20230329_121826_create_user_table_20230329_141546.rs  m20233030_121825_create_team_table.rs  m20233030_121825_create_trip_table.rs  m20233030_121826_create_node_table.rs  m20233030_121827_create_user_team_map.rs  m20233030_121827_create_user_trip_map.rs
src/: main.rs
