[package]
name = "social-world-tour-api"
version = "0.1.0"
authors = ["Yoshiera Huang <huangjasper@126.com>"]
edition = "2021"
publish = false

[dependencies]

axum = "0.6.12"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }
social-world-tour-core = { path = "../core" }
tower = "0.4.13"
tower-cookies = "0.8.0"
anyhow = "1.0.66"
dotenvy = "0.15.6"
tera = "1.17.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
oauth2 = "4.3.0"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls", "json"] }
http = "0.2.9"
axum-server = { version = "0.4.7", features = ["tls-rustls"] }
tracing = "0.1.37"
