[package]
name = "social-world-tour-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
chrono = "0.4.24"
entity = { path = "../entity" }
sea-orm = {  features = ["debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres"] , version = "0.11.2" }
serde_json = "1.0.95"




[dev-dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
